--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           <h1 class="hero-heading text-xxl">YOUR TRUSTED LEGAL ADVISOR</h1>
           <p class="hero-text text-md">
             Your Partner in Legal Matters. <br />
-            Solutions for your Property, Wills & Estates
+            Solutions for your Property, Wills & Estates and Small-Medium
+            Business
           </p>
           <div class="hero-buttons">
             <a href="contacts.html" class="btn">ENQUIRE NOW</a>
@@ -64,6 +65,82 @@
         </div>
       </div>
     </section>
+
+    <!-- About Us-->
+    <section class="about-us">
+      <div class="container-sm">
+        <h1 class="about-heading text-lg text-center">ABOUT US</h1>
+        <p class="about-para text-md text-center">
+          David S. Clarke & Associates was established in 1995 by principal
+          solicitor David Clarke. In 2010 we joined with J.H Fisher & Sons,
+          Annandale. We can assist you with all property matters such as the
+          sale and purchase of real estate and leasing of property, We provide
+          advice for your small-medium business. We also prepare wills, powers
+          of attorney and appointments of enduring guardians, and act in Probate
+          and estate administration. Our David Clarke will work with you to
+          provide a solution to your legal issues.
+        </p>
+      </div>
+    </section>
+
+    <!-- Our services -->
+    <section class="services bg-black10">
+      <div class="container">
+        <h1 class="services-heading text-lg text-center">OUR SERVICES</h1>
+        <div class="top-service">
+          <div class="img-top">
+            <img
+              src="images/key-home-house-estate 1 (1).png"
+              alt="hand with keys"
+            />
+          </div>
+          <div class="services-top-content">
+            <h3 class="services-heading text-center">
+              Property Law & Conveyancing
+            </h3>
+            <p class="services-propncon text-sm text-center">
+              Property transactions, like buying a house, can be complex and
+              laborious with specific legal requirements and steps to go
+              through. What’s more, the legalities can vary in each state and
+              territory, making what is already a busy time even more stressful.
+              Having an experienced property lawyer to guide you can be
+              invaluable
+            </p>
+            <a href="P&C.html" class="btn-lmore">Learn More...</a>
+          </div>
+        </div>
+        <div class="bottom-service">
+          <div class="img-bottom">
+            <img src="images/Old people.jpeg" alt="" />
+          </div>
+          <div class="services-bottom-content">
+            <h3 class="services-heading text-center">
+              Wills & Estates
+            </h3>
+            <p class="services-wiilnstate text-sm text-center">
+              Plan your legacy with ease. Providing you with the guidance and
+              tools you need. Create your will, protect your assets, and ensure
+              your loved ones are taken care of.
+            </p>
+            <a href="W&I.html" class="btn-lmore">Learn More...</a>
+          </div>
+    </section>
+
+     <!-- Query Form -->
+    <section class="question">
+      <div class="container">
+        <h1 class="question-heading text-lg text-center">Ask us a question</h1>
+        <form action="">
+          <input type="text" placeholder="Your name*" class="text-sm" required>
+          <input type="email" placeholder="Your email address*" class="text-sm" required>
+          <input type="text" placeholder="Your phone number*" class="text-sm" required>
+          <textarea rows="8" placeholder="Your query*" class="text-sm" required></textarea>
+          <button type="submit" class="btn">Send your query</button>
+        </form>
+      </div>
+    </section>
+
+    
     <script src="js/main.js"></script>
   </body>
 </html>
